Issue #47 New GET parameter upUntil
Offer a new mandatory parameter upUntil to all entity GET requests. This
helps avoid a situation described in the ticket where a write
transaction can insert data while a later read transation wants to read
the data. This way, the read transaction will not request the data
inserted simultaneously, keeping the client state consistent.
